[gd_scene load_steps=7 format=3 uid="uid://bflc2j43803f8"]

[ext_resource type="Texture2D" uid="uid://bk28hq2p1dy53" path="res://assets/treasure/IronBar.png" id="1_3tkpk"]
[ext_resource type="Script" path="res://scripts/treasure/iron_treasure.gd" id="1_5c4ai"]
[ext_resource type="Resource" uid="uid://dt26cn2c8efd7" path="res://scenes/inventory/Items/ironBar.tres" id="2_2ibcp"]
[ext_resource type="FontFile" uid="uid://bv4aoa1310txh" path="res://assets/tilemap/BitPap.ttf" id="2_laybe"]
[ext_resource type="AudioStream" uid="uid://s5rqf86kxs4x" path="res://scenes/treasure/pick-up-sfx-38516.mp3" id="5_xplhh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4h8m"]
size = Vector2(33.75, 36.875)

[node name="ironTreasure" type="StaticBody2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_5c4ai")
item = ExtResource("2_2ibcp")

[node name="InfoStats" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -118.75
offset_top = -40.0
offset_right = 73.25
offset_bottom = 112.0
scale = Vector2(0.5, 0.5)

[node name="ColorRect" type="ColorRect" parent="InfoStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="TextureRect" type="TextureRect" parent="InfoStats/ColorRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 34.0
offset_right = 120.0
offset_bottom = 90.0
texture = ExtResource("1_3tkpk")

[node name="Title" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_top = 8.0
offset_right = 87.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_laybe")
theme_override_font_sizes/font_size = 32
text = "Iron Bar"
horizontal_alignment = 1

[node name="Description" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 11.0
offset_right = 174.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.625, 0.625)
theme_override_fonts/font = ExtResource("2_laybe")
theme_override_font_sizes/font_size = 16
text = "You no longer take knockback when damaged"
horizontal_alignment = 1

[node name="Flavor" type="Label" parent="InfoStats/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.5
offset_top = -46.0
offset_right = 162.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("2_laybe")
theme_override_font_sizes/font_size = 16
text = "You don't need a video. But you know 
EXACTLY what this sounds like when its 
dropped."

[node name="IronBar" type="Sprite2D" parent="."]
position = Vector2(1.19209e-07, -9.53674e-07)
texture = ExtResource("1_3tkpk")

[node name="IronArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IronArea"]
position = Vector2(-4.76837e-07, 0)
shape = SubResource("RectangleShape2D_j4h8m")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xplhh")

[connection signal="body_entered" from="IronArea" to="." method="_on_iron_area_body_entered"]
[connection signal="body_exited" from="IronArea" to="." method="_on_iron_area_body_exited"]
